--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,8 +17,8 @@
 }
 
 @article{nath2021hybrid,
-  title={Hybrid Learning Model for Spatio-Temporal Forecasting of PM2.5
-using Aerosol Optical Depth},
+  title={Hybrid learning model for spatio-temporal forecasting of pm2.5
+using aerosol optical depth},
   author={Nath, Pritthijit and Roy, Biparnak and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={2021},
@@ -26,7 +26,7 @@ using Aerosol Optical Depth},
 }
 
 @article{nath2021spatio,
-  title={Spatio-Temporal Pollution Forecasting using Hybrid Networks},
+  title={Spatio-temporal pollution forecasting using hybrid networks},
   author={Nath, Pritthijit and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={2021},
@@ -34,7 +34,7 @@ using Aerosol Optical Depth},
 }
 
 @article{nath2021improv,
-  title={Improving Temporal Predictions through Time-Series Labeling using Matrix Profile and Motifs},
+  title={Improving temporal predictions through time-series labeling using matrix profile and notifs},
   author={Saha, Pratik and Nath, Pritthijit and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={2021},
@@ -42,7 +42,7 @@ using Aerosol Optical Depth},
 }
 
 @article{nath2021analysis,
-  title={Analysis of COVID-19 Lockdown Effects on City Air Pollution in India - A Case Study},
+  title={Analysis of COVID-19 lockdown effects on city air pollution in India - A Case Study},
   author={Nath, Pritthijit and Roy, Biparnak and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={2021},
