--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@ using aerosol optical depth},
 }
 
 @article{nath2021improv,
-  title={Improving temporal predictions through time-series labeling using matrix profile and notifs},
+  title={Improving temporal predictions through time-series labeling using matrix profile and motifs},
   author={Saha, Pratik and Nath, Pritthijit and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={2021},
