--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,5 +46,5 @@ using aerosol optical depth},
   author={Nath, Pritthijit and Roy, Biparnak and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={2021},
-  abstract={The imposition of strict restrictions by the Government of India to restrict the spread of the novel coronavirus has changed the socio-economic landscape like never before. The air quality due to such unprecedented events has undergone drastic changes especially in major metropolitan cities, which serve as important financial and industrial hubs of the country. This study investigates the influence lockdowns had on the pollution scenario of four key cities namely, Delhi, Kolkata, Chennai and Mumbai during both the first (2020) and the second (2021) waves . To evaluate the impact, detailed analysis of ground based pollutant concentration data of PM2.5, NOx, SO2 and O3 from various government set up monitoring stations in the period ranging from April’20 to June’21 is conducted along with the corresponding period during 2019 when business was as usual (BaU). Results show that although PM2.5 and NOx for all cities present a decrease during the first wave, the second wave exhibited higher pollutant levels during the second wave. For SO2 and O3 , the trend did not show any consistency over cities. In some cases, the second wave levels showed a significant increase with regard to their BaU counterparts. Out of all the meteorological factors studied over that period, relative humidity was found to have a strong correlation with respect to pollutant levels. Regarding spatial variation within cities, stations especially based in industrial areas showed a significant increase in the winter months of October’20 to January’21. However, second wave and first wave pollutant levels for different stations during the summer months for all cities except Chennai were found to be nearly identical.},
+  abstract={The imposition of strict restrictions by the Government of India to restrict the spread of the novel coronavirus has changed the socio-economic landscape like never before. The air quality due to such unprecedented events has undergone drastic changes especially in major metropolitan cities, which serve as important financial and industrial hubs of the country. This study investigates the influence lockdowns had on the pollution scenario of four key cities namely, Delhi, Kolkata, Chennai and Mumbai during both the first (2020) and the second (2021) waves . To evaluate the impact, detailed analysis of ground based pollutant concentration data of PM2.5 , NOx , SO2 and O 3 from various government set up monitoring stations in the period ranging from April’20 to June’21 is conducted along with the corresponding period during 2019 when business was as usual (BaU). Results show that although PM2.5 and NOx for all cities presented a decrease during the first wave, higher pollutant levels were observed during the second wave. For SO2 and O3 , the trend did not show any consistency over all cities as in some cities, the second wave levels showed a significant increase with regard to their BaU counterparts. Out of all the meteorological factors studied over that period, relative humidity was found to have a strong correlation with respect to pollutant levels. Regarding spatial variation within different cities, although stations especially based in industrial areas showed a significant increase in the winter months of October’20 to January’21, second wave and first wave pollutant levels for different stations during the summer months for all cities except Chennai were found to be nearly identical.},
 }
