Added issue and volume number to publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,18 +2,22 @@
 ---
 
 @article{nath2021long,
-  title={Long-term time-series pollution forecast using statistical and deep learning methods},
-  author={Nath, Pritthijit and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
-  journal={Neural Computing and Applications,},
-  pages={1--20},
-  year={2021},
-  publisher={Springer},
-  abstract={Tackling air pollution has become of utmost importance since the last few decades. Different statistical as well as deep learning methods have been proposed till now, but seldom those have been used to forecast future long-term pollution trends. Forecasting long-term pollution trends into the future is highly important for government bodies around the globe as they help in the framing of efficient environmental policies. This paper presents a comparative study of various statistical and deep learning methods to forecast long-term pollution trends for the two most important categories of particulate matter (PM) which are PM2.5 and PM10. The study is based on Kolkata, a major city on the eastern side of India. The historical pollution data collected from government set-up monitoring stations in Kolkata are used to analyse the underlying patterns with the help of various time-series analysis techniques, which is then used to produce a forecast for the next two years using different statistical and deep learning methods. The findings reflect that statistical methods such as auto-regressive (AR), seasonal auto-regressive integrated moving average (SARIMA) and Holt–Winters outperform deep learning methods such as stacked, bi-directional, auto-encoder and convolution long short-term memory networks based on the limited data available.},
-  url={https://link.springer.com/article/10.1007/s00521-021-05901-2},
-  html={https://link.springer.com/article/10.1007/s00521-021-05901-2},
-  bibtex_show={true}, 
-  pdf={nath2021long.pdf},
-  doi={10.1007/s00521-021-05901-2}
+	author={Nath, Pritthijit and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
+	title={Long-term time-series pollution forecast using statistical and deep learning methods},
+	journal={Neural Computing and Applications},
+	year={2021},
+	month={Oct},
+	day={01},
+	volume={33},
+	number={19},
+	pages={12551-12570},
+	abstract={Tackling air pollution has become of utmost importance since the last few decades. Different statistical as well as deep learning methods have been proposed till now, but seldom those have been used to forecast future long-term pollution trends. Forecasting long-term pollution trends into the future is highly important for government bodies around the globe as they help in the framing of efficient environmental policies. This paper presents a comparative study of various statistical and deep learning methods to forecast long-term pollution trends for the two most important categories of particulate matter (PM) which are PM2.5 and PM10. The study is based on Kolkata, a major city on the eastern side of India. The historical pollution data collected from government set-up monitoring stations in Kolkata are used to analyse the underlying patterns with the help of various time-series analysis techniques, which is then used to produce a forecast for the next two years using different statistical and deep learning methods. The findings reflect that statistical methods such as auto-regressive (AR), seasonal auto-regressive integrated moving average (SARIMA) and Holt--Winters outperform deep learning methods such as stacked, bi-directional, auto-encoder and convolution long short-term memory networks based on the limited data available.},
+	issn={1433-3058},
+	url={https://link.springer.com/article/10.1007/s00521-021-05901-2},
+	html={https://link.springer.com/article/10.1007/s00521-021-05901-2},
+	bibtex_show={true}, 
+	pdf={nath2021long.pdf},
+	doi={10.1007/s00521-021-05901-2}
 }
 
 @article{nath2021hybrid,
