--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,3 @@
----
----
-
 @article{nath2021long,
 	author={Nath, Pritthijit and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
 	title={Long-term time-series pollution forecast using statistical and deep learning methods},
@@ -20,6 +17,14 @@
 	doi={10.1007/s00521-021-05901-2}
 }
 
+@article{nath2021improv,
+  title={Improving Temporal Predictions through Time-Series Labeling using Matrix Profile and Motifs},
+  author={Saha, Pratik and Nath, Pritthijit and Middya, Asif Iqbal and Roy, Sarbani},
+  journal={Accepted at Neural Computing and Applications},
+  year={2021},
+  abstract={One of the most challenging tasks in time-series prediction is a model's capability to accurately learn the repeating granular trends in the data's structure to generate effective predictions. Traditionally specially tuned statistical models and deep-learning models like recurrent neural networks (RNN) and long short term memory networks (LSTM) are used to tackle such problem of sequence modeling. However in practice, factors like inadequate parameters in case of statistical models, random weight initializations, and data inadequacy in case of deep learning models affect the resulting final predictions. As a possible solution to these known problems, this paper introduces a novel  method of time-series labeling (TSL) comprising a combination of encoding and decoding methodologies that not only takes into account the granular structure of a time-series data but also its underlying meta-learners for better predictive accuracy. To demonstrate the approach's effectiveness and capability of handling wide range of scenarios, comparisons are drawn first over different widely used statistical and deep-learning models and then applying TSL to each of them in order to showcase the resulting performance improvement when implemented over a wide variety of real-world datasets. The experimental findings reflect an average of 25% increase in overall performance when using TSL along with mostly similar performance of different combinations regardless of model complexity thereby proving its efficacy in predicting periodic data.},
+}
+
 @article{nath2021hybrid,
   title={Hybrid Learning Model for Spatio-Temporal Forecasting of PM2.5
 using Aerosol Optical Depth},
@@ -35,15 +40,10 @@ using Aerosol Optical Depth},
   journal={Manuscript under review},
   year={2021},
   abstract={Rising real estate prices along with expensive maintenance costs, and lack of spares during times of instrument failure have become major issues for statutory bodies when dealing with real-time pollution monitoring stations.  As a possible solution to these problems, a novel class of hybrid spatio-temporal pollution forecasting networks which are a combination of various widely used temporal forecasting methods and spatial interpolation methods have been proposed in this paper. In addition, a novel multi-site Multi Layer Perception based Ensemble method, capable of improving accuracy by taking exogenous variables into account, has also been proposed. Experimental results based on the multi-site air pollution data of Beijing demonstrate that the proposed class of hybrid networks have been effective in predicting the pollution of unknown locations with great levels of accuracy.  Moreover, the proposed novel MLP Ensemble method for spatial interpolation has also been empirically shown to perform equivalently in comparison to commonly used spatial interpolation methods.},
+  url={https://www.researchsquare.com/article/rs-863931/v1},
+	html={https://www.researchsquare.com/article/rs-863931/v1},
 }
 
-@article{nath2021improv,
-  title={Improving Temporal Predictions through Time-Series Labeling using Matrix Profile and Motifs},
-  author={Saha, Pratik and Nath, Pritthijit and Middya, Asif Iqbal and Roy, Sarbani},
-  journal={Manuscript under review},
-  year={2021},
-  abstract={One of the most challenging tasks in time-series prediction is a model's capability to accurately learn the repeating granular trends in the data's structure to generate effective predictions. Traditionally specially tuned statistical models and deep-learning models like recurrent neural networks (RNN) and long short term memory networks (LSTM) are used to tackle such problem of sequence modeling. However in practice, factors like inadequate parameters in case of statistical models, random weight initializations, and data inadequacy in case of deep learning models affect the resulting final predictions. As a possible solution to these known problems, this paper introduces a novel  method of time-series labeling (TSL) comprising a combination of encoding and decoding methodologies that not only takes into account the granular structure of a time-series data but also its underlying meta-learners for better predictive accuracy. To demonstrate the approach's effectiveness and capability of handling wide range of scenarios, comparisons are drawn first over different widely used statistical and deep-learning models and then applying TSL to each of them in order to showcase the resulting performance improvement when implemented over a wide variety of real-world datasets. The experimental findings reflect an average of 25% increase in overall performance when using TSL along with mostly similar performance of different combinations regardless of model complexity thereby proving its efficacy in predicting periodic data.},
-}
 
 @article{nath2021analysis,
   title={Spatio-Temporal Analysis of COVID-19 Effects on City Air Pollution in India},
