--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,12 +17,23 @@
 	doi={10.1007/s00521-021-05901-2}
 }
 
-@article{nath2021improv,
-  title={Improving Temporal Predictions through Time-Series Labeling using Matrix Profile and Motifs},
-  author={Saha, Pratik and Nath, Pritthijit and Middya, Asif Iqbal and Roy, Sarbani},
-  journal={Accepted at Neural Computing and Applications},
-  year={2021},
-  abstract={One of the most challenging tasks in time-series prediction is a model's capability to accurately learn the repeating granular trends in the data's structure to generate effective predictions. Traditionally specially tuned statistical models and deep-learning models like recurrent neural networks (RNN) and long short term memory networks (LSTM) are used to tackle such problem of sequence modeling. However in practice, factors like inadequate parameters in case of statistical models, random weight initializations, and data inadequacy in case of deep learning models affect the resulting final predictions. As a possible solution to these known problems, this paper introduces a novel  method of time-series labeling (TSL) comprising a combination of encoding and decoding methodologies that not only takes into account the granular structure of a time-series data but also its underlying meta-learners for better predictive accuracy. To demonstrate the approach's effectiveness and capability of handling wide range of scenarios, comparisons are drawn first over different widely used statistical and deep-learning models and then applying TSL to each of them in order to showcase the resulting performance improvement when implemented over a wide variety of real-world datasets. The experimental findings reflect an average of 25% increase in overall performance when using TSL along with mostly similar performance of different combinations regardless of model complexity thereby proving its efficacy in predicting periodic data.},
+@article{saha2022improv,
+  author={Saha, Pratik
+  and Nath, Pritthijit
+  and Middya, Asif Iqbal
+  and Roy, Sarbani},
+  title={Improving temporal predictions through time-series labeling using matrix profile and motifs},
+  journal={Neural Computing and Applications},
+  year={2022},
+  month={Jan},
+  day={10},
+  abstract={One of the most challenging tasks in time-series prediction is a model's capability to accurately learn the repeating granular trends in the data's structure to generate effective predictions. Traditionally specially tuned statistical models and deep learning models like recurrent neural networks and long short-term memory networks are used to tackle such problem of sequence modeling. However in practice, factors like inadequate parameters in case of statistical models, random weight initializations, and data inadequacy in case of deep learning models affect the resulting final predictions. As a possible solution to these known problems, this paper introduces a novel method of time-series labeling (TSL) comprising a combination of encoding and decoding methodologies that not only takes into account the granular structure of a time-series data but also its underlying meta-learners for better predictive accuracy. To demonstrate the approach's effectiveness and capability of handling wide range of scenarios, comparisons are drawn first over different widely used statistical and deep learning models and then applying TSL to each of them in order to showcase the resulting performance improvement when implemented over a wide variety of real-world datasets. The experimental findings reflect an average of 25{\%} increase in overall performance when using TSL along with mostly similar performance of different combinations regardless of model complexity thereby proving its efficacy in predicting periodic data.},
+  issn={1433-3058},
+  doi={10.1007/s00521-021-06744-7},
+  url={https://doi.org/10.1007/s00521-021-06744-7},
+	html={https://link.springer.com/article/10.1007/s00521-021-06744-7},
+	bibtex_show={true}, 
+	pdf={saha2022improv.pdf},
 }
 
 @article{nath2021hybrid,
