--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,6 +34,8 @@
 	html={https://link.springer.com/article/10.1007/s00521-021-06744-7},
 	bibtex_show={true}, 
 	pdf={saha2022improv.pdf},
+  pages={1-17},
+  volume={Online}
 }
 
 @article{nath2021hybrid,
@@ -41,7 +43,7 @@
 using Aerosol Optical Depth},
   author={Nath, Pritthijit and Roy, Biparnak and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
-  year={2021},
+  year={Review},
   abstract={Existence of several challenges and high cost in the development of monitoring infrastructure have become major reasons for data sparsity by statutory government agencies tasked to study pollution exposure in urban areas. To tackle this problem, the use of aerosol optical depth (AOD) data from various satellite based instruments coupled with the usage of learning algorithms have become popular in recent times. This paper presents a novel four-staged approach using different statistical, machine learning and deep learning methods to develop a spatio-temporal hybrid model for temporal forecasting using data from existing stations along with satellite aerosol optical depth data for spatial interpolation. Experiments conducted on real-world data belonging to the cities of Kolkata, Bengaluru and Mumbai show that a consistent pattern is not followed in all the cities in all stages except in spatial interpolation where Random Forest Regression is found to surpass all other models used. While an encoder-decoder architecture based long short term memory networks (LSTM Auto-Encoder) method when used for temporal forecasting in the hybrid method outperforms others in Mumbai, a Random Forest Regression based method and a multi-layer perceptron based method outperforms similarly in Kolkata and Bengaluru respectively.},
 }
 
@@ -49,7 +51,7 @@ using Aerosol Optical Depth},
   title={Spatio-Temporal Pollution Forecasting using Hybrid Networks},
   author={Nath, Pritthijit and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
-  year={2021},
+  year={Review},
   abstract={Rising real estate prices along with expensive maintenance costs, and lack of spares during times of instrument failure have become major issues for statutory bodies when dealing with real-time pollution monitoring stations.  As a possible solution to these problems, a novel class of hybrid spatio-temporal pollution forecasting networks which are a combination of various widely used temporal forecasting methods and spatial interpolation methods have been proposed in this paper. In addition, a novel multi-site Multi Layer Perception based Ensemble method, capable of improving accuracy by taking exogenous variables into account, has also been proposed. Experimental results based on the multi-site air pollution data of Beijing demonstrate that the proposed class of hybrid networks have been effective in predicting the pollution of unknown locations with great levels of accuracy.  Moreover, the proposed novel MLP Ensemble method for spatial interpolation has also been empirically shown to perform equivalently in comparison to commonly used spatial interpolation methods.},
   url={https://www.researchsquare.com/article/rs-863931/v1},
 	html={https://www.researchsquare.com/article/rs-863931/v1},
@@ -60,6 +62,6 @@ using Aerosol Optical Depth},
   title={Spatio-Temporal Analysis of COVID-19 Effects on City Air Pollution in India},
   author={Nath, Pritthijit and Roy, Biparnak and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
-  year={2021},
+  year={Review},
   abstract={The imposition of strict restrictions by the Government of India to restrict the spread of the novel coronavirus has changed the socio-economic landscape like never before. The air quality due to such unprecedented events has undergone drastic changes especially in major metropolitan cities, which serve as important financial and industrial hubs of the country. This study investigates the influence lockdowns had on the pollution scenario of four key cities namely, Delhi, Kolkata, Chennai and Mumbai during both the first (2020) and the second (2021) waves . To evaluate the impact, detailed analysis of ground based pollutant concentration data of PM2.5, NOx, SO2 and O3 from various government set up monitoring stations in the period ranging from April’20 to June’21 is conducted along with the corresponding period during 2019 when business was as usual (BaU). Results show that although PM2.5 and NOx for all cities present a decrease during the first wave, the second wave exhibited higher pollutant levels during the second wave. For SO2 and O3 , the trend did not show any consistency over cities. In some cases, the second wave levels showed a significant increase with regard to their BaU counterparts. Out of all the meteorological factors studied over that period, relative humidity was found to have a strong correlation with respect to pollutant levels. Regarding spatial variation within cities, stations especially based in industrial areas showed a significant increase in the winter months of October’20 to January’21. However, second wave and first wave pollutant levels for different stations during the summer months for all cities except Chennai were found to be nearly identical.},
 }
