Added changes with Imperial theme

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,6 +38,14 @@
   volume={Online}
 }
 
+@article{nath2022empirical,
+  title={Empirical Assessment of Transformer Based Neural Network Architecture in Forecasting Pollution Trends - Bachelor's Project},
+  author={Nath, Pritthijit and Middya, Asif Iqbal and Roy, Sarbani},
+  journal={Manuscript under review},
+  year={Under Review},
+  abstract={With rising pollution concerns in recent times, producing refined and accurate predictions as a part of United Nations Sustainable Development Goals 11 (Sustainable Cities and Communities) and 13 (Climate Action) have gained utmost importance. As new model architectures become available, it becomes difficult for an average policymaker to evaluate various models comprehensively. One such architecture is the Transformer neural network which has shown an exceptional rise in various areas such as natural language processing and computer vision. This paper explores the performance of such a Transformer based neural network (referred in the paper as PolTrans) in the domain of pollution forecasting. Experiments based on four univariate city pollution datasets (Delhi, Seoul, Skopje and Ulaanbaatar) and two multivariate datasets (Beijing PM2.5 and Beijing PM10) are performed against baselines consisting of widely used statistical, machine learning and deep learning methods. Findings show that although PolTrans performs comparatively better compared to existing deep learning methods such as BiDirectional long short-term memory networks (LSTM), LSTM AutoEncoder, etc. for modelling pollution in cities such as Beijing, Delhi and Ulaanbaatar, in the majority of cases, the PolTrans architecture lags behind statistical and machine learning methods such as AutoRegressive Integrated Moving Average ARIMA), Random Forest Regression, Standard Vector Regression (SVR), etc. by a range of 1.5 - 15 units in terms of Root Mean Square Error.},
+}
+
 @article{nath2021hybrid,
   title={Hybrid Learning Model for Spatio-Temporal Forecasting of PM2.5
 using Aerosol Optical Depth},
