--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,8 +18,8 @@
 }
 
 @article{nath2022hybrid,
-  title={Hybrid Learning Model for Spatio-Temporal Forecasting of PM2.5
-using Aerosol Optical Depth},
+  title={Hybrid learning model for spatio-temporal forecasting of PM2.5
+using aerosol optical depth},
   author={Nath, Pritthijit and Roy, Biparnak and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Neural Computing and Applications},
   year={2022},
@@ -51,7 +51,7 @@ using Aerosol Optical Depth},
 }
 
 @article{nath2022empirical,
-  title={Empirical Assessment of Transformer Based Neural Network Architecture in Forecasting Pollution Trends - Bachelor's Project},
+  title={Empirical assessment of transformer based neural network architecture in forecasting pollution trends - Bachelor's Project},
   author={Nath, Pritthijit and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={Under Review},
@@ -59,7 +59,7 @@ using Aerosol Optical Depth},
 }
 
 @article{nath2021spatio,
-  title={Spatio-Temporal Pollution Forecasting using Hybrid Networks},
+  title={Spatio-temporal pollution forecasting using hybrid networks},
   author={Nath, Pritthijit and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={Under Review},
@@ -70,7 +70,7 @@ using Aerosol Optical Depth},
 
 
 @article{nath2021analysis,
-  title={Spatio-Temporal Analysis of COVID-19 Effects on City Air Pollution in India},
+  title={Spatio-temporal analysis of COVID-19 effects on city air pollution in India},
   author={Nath, Pritthijit and Roy, Biparnak and Saha, Pratik and Middya, Asif Iqbal and Roy, Sarbani},
   journal={Manuscript under review},
   year={Under Review},
