--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@ using aerosol optical depth},
   abstract={Existence of several challenges and high cost in the development of monitoring infrastructure have become major reasons for data sparsity by statutory government agencies tasked to study pollution exposure in urban areas. To tackle this problem, the use of aerosol optical depth (AOD) data from various satellite based instruments coupled with the usage of learning algorithms have become popular in recent times. This paper presents a novel four-staged approach using different statistical, machine learning and deep learning methods to develop a spatio-temporal hybrid model for temporal forecasting using data from existing stations along with satellite aerosol optical depth data for spatial interpolation. Experiments conducted on real-world data belonging to the cities of Kolkata, Bengaluru and Mumbai show that a consistent pattern is not followed in all the cities in all stages except in spatial interpolation where Random Forest Regression is found to surpass all other models used. While an encoder-decoder architecture based long short term memory networks (LSTM Auto-Encoder) method when used for temporal forecasting in the hybrid method outperforms others in Mumbai, a Random Forest Regression based method and a multi-layer perceptron based method outperforms similarly in Kolkata and Bengaluru respectively.},
 }
 
-@article{Saha2022,
+@article{saha2022improv,
   author={Saha, Pratik
   and Nath, Pritthijit
   and Middya, Asif Iqbal
@@ -45,7 +45,10 @@ using aerosol optical depth},
   abstract={One of the most challenging tasks in time-series prediction is a model's capability to accurately learn the repeating granular trends in the data's structure to generate effective predictions. Traditionally specially tuned statistical models and deep learning models like recurrent neural networks and long short-term memory networks are used to tackle such problem of sequence modeling. However in practice, factors like inadequate parameters in case of statistical models, random weight initializations, and data inadequacy in case of deep learning models affect the resulting final predictions. As a possible solution to these known problems, this paper introduces a novel method of time-series labeling (TSL) comprising a combination of encoding and decoding methodologies that not only takes into account the granular structure of a time-series data but also its underlying meta-learners for better predictive accuracy. To demonstrate the approach's effectiveness and capability of handling wide range of scenarios, comparisons are drawn first over different widely used statistical and deep learning models and then applying TSL to each of them in order to showcase the resulting performance improvement when implemented over a wide variety of real-world datasets. The experimental findings reflect an average of 25{\%} increase in overall performance when using TSL along with mostly similar performance of different combinations regardless of model complexity thereby proving its efficacy in predicting periodic data.},
   issn={1433-3058},
   doi={10.1007/s00521-021-06744-7},
-  url={https://doi.org/10.1007/s00521-021-06744-7}
+  url={https://doi.org/10.1007/s00521-021-06744-7},
+  bibtex_show={true}, 
+	html={https://link.springer.com/article/10.1007/s00521-021-06744-7},
+  pdf={saha2022improv.pdf},
 }
 
 
